tests/unknown_props_in_conditionals/unknown_props_in_conditionals.exp
Error --------------------------------------------------------------------------------------------------- cycle1.js:3:12

Cannot get `o_loop.q` because property `q` is missing in object literal [1]. [prop-missing]

   cycle1.js:3:12
   3| if (o_loop.q) {} // error: o_loop.q does not exist (NB: this is `o` exported from here)
                 ^

References:
   cycle1.js:5:18
   5| export const o = { p: 0 };
                       ^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- cycle2.js:3:7

Cannot get `o.q` because property `q` is missing in object literal [1]. [prop-missing]

   cycle2.js:3:7
   3| if (o.q) {} // error: o.q does not exist
            ^

References:
   cycle1.js:5:18
   5| export const o = { p: 0 };
                       ^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- dependent.js:3:7

Cannot get `o.q` because property `q` is missing in object literal [1]. [prop-missing]

   dependent.js:3:7
   3| if (o.q) {} // error, o.q not declared
            ^

References:
   dependency.js:1:18
   1| export const o = { p: 0 };
                       ^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:16:11

Cannot get `mixed.thisPropDoesNotExist` because property `thisPropDoesNotExist` is missing in `unknown` [1].
[incompatible-type]

   test.js:16:11
   16| if (mixed.thisPropDoesNotExist) {} // Error
                 ^^^^^^^^^^^^^^^^^^^^

References:
   test.js:1:22
    1| declare const mixed: unknown;
                            ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:27:19

Cannot get `inexactObject.thisPropDoesNotExist` because property `thisPropDoesNotExist` is missing in object type [1].
[prop-missing]

   test.js:27:19
   27| if (inexactObject.thisPropDoesNotExist) {} // Error
                         ^^^^^^^^^^^^^^^^^^^^

References:
   test.js:6:30
    6| declare const inexactObject: { x: string };
                                    ^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:30:17

Cannot get `exactObject.thisPropDoesNotExist` because property `thisPropDoesNotExist` is missing in object type [1].
[prop-missing]

   test.js:30:17
   30| if (exactObject.thisPropDoesNotExist) {} // Error
                       ^^^^^^^^^^^^^^^^^^^^

References:
   test.js:7:28
    7| declare const exactObject: { x: string };
                                  ^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:33:20

Cannot get `unionOfObjects.thisPropDoesNotExist` because property `thisPropDoesNotExist` is missing in object type [1].
[prop-missing]

   test.js:33:20
   33| if (unionOfObjects.thisPropDoesNotExist) {} // Error
                          ^^^^^^^^^^^^^^^^^^^^

References:
   test.js:9:31
    9| declare const unionOfObjects: { x: string } | { y: string };
                                     ^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:38:5

Cannot get `intersectionOfObjects.thisPropDoesNotExist` because: [incompatible-use]
 - Either property `thisPropDoesNotExist` is missing in object type [1].
 - Or property `thisPropDoesNotExist` is missing in object type [2].

   test.js:38:5
   38| if (intersectionOfObjects.thisPropDoesNotExist) {} // Error
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   test.js:10:38
   10| declare const intersectionOfObjects: { x: string } & { y: string };
                                            ^^^^^^^^^^^^^ [1]
   test.js:10:54
   10| declare const intersectionOfObjects: { x: string } & { y: string };
                                                            ^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:43:13

Cannot get `myClass.thisPropDoesNotExist` because property `thisPropDoesNotExist` is missing in statics of
`myClass` [1]. [prop-missing]

   test.js:43:13
   43| if (myClass.thisPropDoesNotExist) {} // Error
                   ^^^^^^^^^^^^^^^^^^^^

References:
   test.js:12:7
   12| class myClass {}
             ^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:45:14

Cannot get `instance.thisPropDoesNotExist` because property `thisPropDoesNotExist` is missing in `myClass` [1].
[prop-missing]

   test.js:45:14
   45| if (instance.thisPropDoesNotExist) {} // Error
                    ^^^^^^^^^^^^^^^^^^^^

References:
   test.js:13:25
   13| declare const instance: myClass;
                               ^^^^^^^ [1]



Found 10 errors
